<resources>
    <string name="app_name">calculator</string>
    <string name="out">out</string>
    <string name="del">←</string>
    <string name="pai">Π</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="delete">←</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sub">-</string>
    <string name="percent">%</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="mul">*</string>
    <string name="l_bracket">(</string>
    <string name="r_bracket">)</string>
    <string name="div">/</string>
    <string name="result">=</string>
    <string name="ac">ac</string>
    <string name="help">帮助</string>
    <string name="factorial">x!</string>
    <string name="square">x2</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="menu">菜单</string>
    <string name="hs">换算</string>
    <string name="length">长度</string>
    <string name="m">m</string>
    <string name="dm">dm</string>
    <string name="cm">cm</string>
    <string name="mm">mm</string>
    <string name="km">km</string>
    <string name="volume">体积</string>
    <string name="m3">m3</string>
    <string name="dm3">dm3</string>
    <string name="cm3">cm3</string>
    <string name="mm3">mm3</string>
    <string name="km3">km3</string>
    <string name="scale">进制</string>
    <string name="_10scale">10进制→</string>
    <string name="_2scale">2进制→</string>
    <string name="_8scale">8进制→</string>
    <string name="_16scale">16进制→</string>
    <string name="back">back</string>
</resources>