<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity_2">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hs"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/length"
        android:background="#7B68EE"
        />
    <EditText
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/length"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints=""
        android:inputType=""
        android:hint="@string/_0"
        />
    <Button
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/km"
        />
    <Button
        android:id="@+id/m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input1"
        app:layout_constraintLeft_toRightOf="@id/km"
        android:text="@string/m"
        />
    <Button
        android:id="@+id/dm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input1"
        app:layout_constraintLeft_toRightOf="@+id/m"
        android:text="@string/dm"
        />
    <Button
        android:id="@+id/cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input1"
        app:layout_constraintLeft_toRightOf="@+id/dm"
        android:text="@string/cm"
        />
    <Button
        android:id="@+id/mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/km"
        android:text="@string/mm"
        />
    <EditText
        android:id="@+id/result1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mm"
        android:autofillHints=""
        android:inputType=""
        android:hint="@string/_0"
        />
    <TextView
        android:id="@+id/volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/volume"
        android:background="#7B68EE"
        />
    <EditText
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/volume"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints=""
        android:inputType=""
        android:hint="@string/_0"
        />
    <Button
        android:id="@+id/km3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/km3"
        />
    <Button
        android:id="@+id/m3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input2"
        app:layout_constraintLeft_toRightOf="@id/km3"
        android:text="@string/dm3"
        />
    <Button
        android:id="@+id/dm3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input2"
        app:layout_constraintLeft_toRightOf="@id/m3"
        android:text="@string/dm3"
        />
    <Button
        android:id="@+id/cm3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input2"
        app:layout_constraintLeft_toRightOf="@id/dm3"
        android:text="@string/cm3"
        />
    <Button
        android:id="@+id/mm3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/km3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/mm3"
        />
    <EditText
        android:id="@+id/result2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mm3"
        android:autofillHints=""
        android:inputType=""
        android:hint="@string/_0"/>
    <TextView
        android:id="@+id/scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result2"
        android:text="@string/scale"
        android:background="#7B68EE"
        />
    <EditText
        android:id="@+id/input3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scale"
        android:autofillHints=""
        android:inputType=""
        android:hint="@string/_0"
        />
    <Button
        android:id="@+id/ten_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/_10scale"
        />
    <Button
        android:id="@+id/two_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input3"
        app:layout_constraintLeft_toRightOf="@+id/ten_scale"
        android:text="@string/_2scale"
        />
    <Button
        android:id="@+id/eight_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input3"
        app:layout_constraintLeft_toRightOf="@+id/two_scale"
        android:text="@string/_8scale"
        />
    <Button
        android:id="@+id/f_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input3"
        app:layout_constraintLeft_toRightOf="@+id/eight_scale"
        android:text="@string/_16scale"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ten_scale"
        android:autofillHints=""
        android:inputType=""
        android:hint="@string/_0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>